fixed broken code + reference to new feature of ancombc2 function

--- a/30_differential_abundance.Rmd
+++ b/30_differential_abundance.Rmd
@@ -79,15 +79,11 @@ library(Maaslin2)
 library(MicrobiomeStat)
 library(knitr)
 library(tidyverse)
+library(ANCOMBC)
 
 # set random seed because some tools can randomly vary and then produce 
 # different results:
 set.seed(13253)
-
-# For ANCOMBC we need development version
-# Can be installed with:
-# remotes::install_github("FrederickHuangLin/ANCOMBC")
-library(ANCOMBC)
 
 # we use a demo dataset and restrict it to two geo locations
 # for easy illustration
@@ -195,13 +191,13 @@ par(mfrow = c(1, 2))
 ```
 
 The evaluation as differential abundant in above plots is based on the
-corrected pvalue. According to the ALDEx2 developers, the safest
+corrected p-value. According to the ALDEx2 developers, the safest
 approach is to identify those features where the 95% CI of the effect
 size does not cross 0. As we can see in below table, this is not the
 case for any of the identified genera (see overlap column, which
 indicates the proportion of overlap). Also, the authors recommend to
-focus on effect sizes and CIs rather than interpreting the pvalue. To
-keep the comparison simple, we will here use the pvalue as decision
+focus on effect sizes and CIs rather than interpreting the p-value. To
+keep the comparison simple, we will here use the p-value as decision
 criterion. But please be aware that the effect size together with the
 CI is a better answer to the question we are typically interested in
 (see also [this
@@ -234,20 +230,27 @@ this method provides p-values and confidence intervals for each
 taxon. It also controls the FDR and it is computationally simple to
 implement.
 
-As we will see below, to obtain results, all that is needed is to pass
-a tse object to the `ancombc()` function. Below, we first specify a
-formula.  In this formula, other covariates could potentially be
-included to adjust for confounding. We show this further below.
-Please check the [function documentation](https://rdrr.io/github/FrederickHuangLin/ANCOMBC/man/ancombc.html)
-to learn about the additional arguments that we specify below.
+Note that the original method was implemented in the `ancombc()` function (see 
+[extended tutorial](https://www.bioconductor.org/packages/release/bioc/vignettes/ANCOMBC/inst/doc/ANCOMBC.html)).
+The method has since then been updated and new features have been added to enable
+multi-group comparisons and repeated measurements among other improvements. 
+We do not cover the more advanced features of ANCOMBC in this tutorial 
+as these features are documented in detail in this 
+[tutorial](https://www.bioconductor.org/packages/release/bioc/vignettes/ANCOMBC/inst/doc/ANCOMBC2.html).
 
-We recommend to use `r max_iter = 100` or higher in real case studies.
+We now proceed with a simple example.  First, we specify a formula. In this 
+formula, other covariates could potentially be included to adjust for 
+confounding. We show this further below. Again, please make sure to check the 
+[function documentation](https://rdrr.io/github/FrederickHuangLin/ANCOMBC/man/ancombc.html)
+as well as the linked tutorials to learn about the additional arguments 
+that we specify.
+
 
 ```{r ancombc2, warning = FALSE, eval=FALSE}
 # perform the analysis 
 out <- ancombc2(
   data = tse,
-  tax_level="family",
+  tax_level="genus",
   fix_formula = "Geographical_location", 
   p_adj_method = "fdr", 
   prv_cut = 0, # prev filtering has been done above already
@@ -256,7 +259,7 @@ out <- ancombc2(
   struc_zero = TRUE, 
   neg_lb = TRUE,
   iter_control = list(tol = 1e-5, max_iter = 20, verbose = FALSE),
-  em_control = list(tol = 1e-5, max_iter = 20),  
+  em_control = list(tol = 1e-5, max_iter = 20), # use max_iter >= 100 on real data 
   alpha = 0.05, 
   global = TRUE # multi group comparison will be deactivated automatically 
 )
@@ -346,7 +349,7 @@ res <- linda(
   mean.abund.filter = 0)
 
 # to scan the table for genera where H0 could be rejected:
-kable(head(filter(as.data.frame(res$output), Geographical_locationPune.reject)))
+kable(head(filter(as.data.frame(res$output$Geographical_locationPune), reject)))
 ```
 
 
@@ -362,30 +365,35 @@ and shows a score from 0 to 3 indicating how many methods agreed on a particular
 taxon.
 
 
-
 ```{r linda2, eval=FALSE}
-# Rename "taxon" column from ancombc results  so that it match with others
-colnames(out$res)[colnames(out$res) == "taxon"] <- "genus"
+# change genus names to otu ids for ancombc results to make it joinable with others
+id_switch <- as.data.frame(rowData(tse)) %>%
+  rownames_to_column("taxid") %>%
+  select(taxid, genus)
+abc_res <- select(out$res, genus = taxon, ancombc = diff_Geographical_locationPune) %>%
+  left_join(id_switch, by = "genus") %>%
+  select(-genus)
 
+# join all results together
 summ <- full_join(
-    rownames_to_column(aldex_out, "genus") %>%
-      select(genus, aldex2 = wi.eBH),
-    out$res %>%
-      select(genus, ancombc = diff_Geographical_locationPune),
-    by = "genus") %>%
+    rownames_to_column(aldex_out, "taxid") %>%
+      select(taxid, aldex2 = wi.eBH),
+    abc_res,
+    by = "taxid") %>%
   full_join(
-    select(fit_data$results, genus = feature, maaslin2 = qval), 
-    by = "genus") %>%
+    select(fit_data$results, taxid = feature, maaslin2 = qval), 
+    by = "taxid") %>%
     full_join(
-      rownames_to_column(as.data.frame(res$output), "genus") %>%
-        select(genus, LinDA = Geographical_locationPune.reject), 
-      by = "genus") %>%
+      rownames_to_column(as.data.frame(res$output$Geographical_locationPune), "taxid") %>%
+        select(taxid, LinDA = reject), 
+      by = "taxid") %>%
   mutate(
     across(c(aldex2, maaslin2), ~ .x <= 0.05),
     # the following line would be necessary without prevalence filtering 
     # as some methods output NA
     #across(-genus, function(x) ifelse(is.na(x), FALSE, x)),
-    score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA)))
+    ancombc = ifelse(is.na(ancombc), FALSE, ancombc),
+    score = rowSums(across(c(aldex2, ancombc, maaslin2, LinDA))),
   )
 
 # This is how it looks like:
@@ -413,8 +421,8 @@ any method or for those taxa that were identified by all methods:
 plot_data <- data.frame(t(assay(tse)))
 plot_data$Geographical_location <- tse$Geographical_location
 # create a plot for each genus where the score is indicated in the title
-plots <- pmap(select(summ, genus, score), function(genus, score) {
-  ggplot(plot_data, aes("Geographical_location", genus)) +
+plots <- pmap(select(summ, taxid, score), function(taxid, score) {
+  ggplot(plot_data, aes_string("Geographical_location", taxid)) +
     geom_boxplot(aes(fill = Geographical_location), outlier.shape = NA) +
     geom_jitter(width = 0.2, alpha = 0.5) +
     ggtitle(glue::glue("Score {score}")) +
