--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -91,7 +91,9 @@ plot_ly(reduced_data, x=~PC1,y=~PC2,z=~PC3) %>%
 
 ## PERMANOVA comparison
 
-Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The optional argument `by` has an effect on the statistical outcome, so the two possibilities are compared in this section.
+Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The
+optional argument `by` has an effect on the statistical outcome, so the two possibilities are
+compared in this section.
 
 ```{r message = FALSE, warning = FALSE}
 library(vegan)
@@ -159,7 +161,9 @@ for (row_idx in 1:nrow(var_perm)) {
 }
 ```
 
-The following table displays the p-values for the three variables ClinicalStatus, Gender and Nationality obtained by PERMANOVA with `adonis2`. As you can see, p-values remain identical when `by = "margin"`, but they change with the order of the variables in the formula when `by = terms` (default).
+The following table displays the p-values for the three variables ClinicalStatus, Gender and
+Nationality obtained by PERMANOVA with `adonis2`. As you can see, p-values remain identical when
+`by = "margin"`, but they change with the order of the variables in the formula when `by = terms` (default).
 
 ```{r message = FALSE, warning = FALSE}
 df <- terms_df %>%
