Specify reduce package

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -110,7 +110,7 @@ vars <- c("Nationality", "Gender", "ClinicalStatus")
 by_args <- factor(c("terms", "margin"))
 
 var_perm <- permutations(n = 3, r = 3, vars)
-formulas <- apply(var_perm, 1, function(row) reduce(row, function(x, y) paste(x, "+", y)))
+formulas <- apply(var_perm, 1, function(row) purrr::reduce(row, function(x, y) paste(x, "+", y)))
 
 terms_df <- data.frame("Formula" = formulas,
                        "ClinicalStatus" = rep(0, 6),
@@ -127,7 +127,7 @@ margin_df <- data.frame("Formula" = formulas,
 ```{r message = FALSE, warning = FALSE}
 for (row_idx in 1:nrow(var_perm)) {
   
-  tmp_formula <- reduce(var_perm[row_idx, ], function(x, y) paste(x, "+", y))
+  tmp_formula <- purrr::reduce(var_perm[row_idx, ], function(x, y) paste(x, "+", y))
   tmp_formula <- as.formula(paste0('t(assay(enterotype, "relabundance")) ~ ',
                             tmp_formula))
 
