Add chunk names for troubleshooting

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -95,7 +95,7 @@ Here we present two possible uses of the `adonis2` function which performs PERMA
 optional argument `by` has an effect on the statistical outcome, so the two possibilities are
 compared in this section.
 
-```{r message = FALSE, warning = FALSE}
+```{r permanova_prep, message = FALSE, warning = FALSE}
 library(vegan)
 library(gtools)
 library(purrr)
@@ -124,7 +124,7 @@ margin_df <- data.frame("Formula" = formulas,
 ```
 
 
-```{r message = FALSE, warning = FALSE}
+```{r permanova_loop, message = FALSE, warning = FALSE}
 for (row_idx in 1:nrow(var_perm)) {
   
   tmp_formula <- purrr::reduce(var_perm[row_idx, ], function(x, y) paste(x, "+", y))
@@ -165,7 +165,7 @@ The following table displays the p-values for the three variables ClinicalStatus
 Nationality obtained by PERMANOVA with `adonis2`. As you can see, p-values remain identical when
 `by = "margin"`, but they change with the order of the variables in the formula when `by = terms` (default).
 
-```{r message = FALSE, warning = FALSE}
+```{r permanova_table, message = FALSE, warning = FALSE}
 df <- terms_df %>%
   inner_join(margin_df, by = "Formula", suffix = c(" (terms)", " (margin)"))
 
