Debug compilation of PERMANOVA comparison

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -10,12 +10,6 @@ if (!require(rgl)){
 if (!require(plotly)){
   BiocManager::install("plotly")  
 }
-if (!require(gtools)){
-  install.packages("gtools")  
-}
-if (!require(purrr)){
-  install.packages("purrr")  
-}
 ```
 
 ```{r, setup, warning=FALSE, message=FALSE}
@@ -27,7 +21,7 @@ knitr::knit_hooks$set(webgl = hook_webgl)
 
 In this section we make a 3D version of the earlier [ Visualizing the most dominant genus on PCoA](https://microbiome.github.io/OMA/microbiome-exploration.html#visualizing-the-most-dominant-genus-on-pcoa), with the help of the [plotly](https://plotly.com/r/) R package.
 
-```{r, message=FALSE, warning=FALSE}
+```{r viz PCoA, message=FALSE, warning=FALSE}
 # Importing necessary libraries
 library(curatedMetagenomicData)
 library(dplyr)
@@ -91,15 +85,24 @@ plot_ly(reduced_data, x=~PC1,y=~PC2,z=~PC3) %>%
 
 ## PERMANOVA comparison
 
+```{r permanova_import, warning = FALSE, message = FALSE}
+if (!require(gtools)){
+  install.packages("gtools")  
+}
+if (!require(purrr)){
+  install.packages("purrr")  
+}
+
+library(vegan)
+library(gtools)
+library(purrr)
+```
+
 Here we present two possible uses of the `adonis2` function which performs PERMANOVA. The
 optional argument `by` has an effect on the statistical outcome, so the two possibilities are
 compared in this section.
 
 ```{r permanova_prep, message = FALSE, warning = FALSE}
-library(vegan)
-library(gtools)
-library(purrr)
-
 data("enterotype")
 enterotype <- transformCounts(enterotype, method = "relabundance")
 
