Add custom links to subchapters

--- a/06_packages.Rmd
+++ b/06_packages.Rmd
@@ -49,7 +49,7 @@ Some of the R packages supporting the _TreeSummarizedExperiment_ framework inclu
 - [miaSim](microbiome.github.io/miaSim) : microbiome data simulation
 - [miaTime](microbiome.github.io/miaTime) : microbiome time series analysis
 
-### Tree-based methods
+### Tree-based methods {sub-tree-methods}
 
 - [philr](http://bioconductor.org/packages/devel/bioc/html/philr.html) (external, @Silverman2017)
 - [mia](microbiome.github.io/mia): Microbiome analysis tools [@R-mia]
@@ -57,12 +57,12 @@ Some of the R packages supporting the _TreeSummarizedExperiment_ framework inclu
 - [miaSim](microbiome.github.io/miaSim): Microbiome data simulations [@Simsek2021]
 - [miaTime](microbiome.github.io/miaTime): Microbiome time series analysis [@Lahti2021]
 
-### Differential abundance
+### Differential abundance {sub-diff-abund}
 
 - [benchdamic](https://bioconductor.org/packages/release/bioc/vignettes/benchdamic/inst/doc/intro.html) for benchmarking differential abundance methods
 - [ANCOMBC](https://bioconductor.org/packages/devel/bioc/html/ANCOMBC.html) for differential abundance analysis
 
-### Manipulation
+### Manipulation {sub-manipulation}
 
 - [MicrobiotaProcess](https://bioconductor.org/packages/release/bioc/html/MicrobiotaProcess.html) for analyzing microbiome and other ecological data within the tidy framework
 
