Specify inner_join pachage

--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -169,8 +169,9 @@ Nationality obtained by PERMANOVA with `adonis2`. As you can see, p-values remai
 `by = "margin"`, but they change with the order of the variables in the formula when `by = terms` (default).
 
 ```{r permanova_table, message = FALSE, warning = FALSE}
+
 df <- terms_df %>%
-  inner_join(margin_df, by = "Formula", suffix = c(" (terms)", " (margin)"))
+  dplyr::inner_join(margin_df, by = "Formula", suffix = c(" (terms)", " (margin)"))
 
 knitr::kable(df)
 ```
