Fix broken links and references

--- a/20_beta_diversity.Rmd
+++ b/20_beta_diversity.Rmd
@@ -413,7 +413,7 @@ plot
 
 From RDA plot, we can see that only age has significant affect on microbial profile. 
 
-## Visualizing the most dominant genus on PCoA
+## Visualizing the most dominant genus on PCoA {#pcoa-genus}
 
 In this section we visualize most dominant genus on PCoA. A similar visualization was proposed by Salosensaari et al. [-@Salosensaari2021].
 
