--- a/97_extra_materials.Rmd
+++ b/97_extra_materials.Rmd
@@ -170,3 +170,18 @@ for (row_idx in 1:nrow(var_perm)) {
 }
 ```
 
+
+
+
+The following table displays the p-values for the three variables ClinicalStatus, Gender and
+Nationality obtained by PERMANOVA with `adonis2`. As you can see, p-values remain identical when
+`by = "margin"`, but they change with the order of the variables in the formula when `by = "terms"` (default).
+
+```{r permanova_table, message = FALSE, warning = FALSE}
+
+df <- terms_df %>%
+  dplyr::inner_join(margin_df, by = "Formula", suffix = c(" (terms)", " (margin)"))
+
+knitr::kable(df)
+```
+
