--- a/97_extra_materials_bayes.Rmd
+++ b/97_extra_materials_bayes.Rmd
@@ -25,6 +25,7 @@ Loading the libraries and importing data:
 
 ```{r, message=FALSE, warning=FALSE}
 library(fido)
+library(mia)
 ```
 
 ```{r, message=FALSE, warning=FALSE, eval=FALSE}
