--- a/97_extra_materials_bayes.Rmd
+++ b/97_extra_materials_bayes.Rmd
@@ -44,6 +44,7 @@ analysis as an example, and beforehand we check for missing data:
 
 
 ```{r, message=FALSE, warning=FALSE}
+library(mia)
 cov_names <- c("Sex","Age_Years","Delivery_Mode")
 na_counts <- apply(is.na(colData(tse)[,cov_names]), 2, sum)
 na_summary<-as.data.frame(na_counts,row.names=cov_names)
