--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -17,7 +17,7 @@ R/Bioconductor for the manipulation, analysis, and reproducible
 reporting of hierarchical, heterogeneous, and multi-modal microbiome
 profiling data. The data science methodology is tightly integrated
 with the broader R/Bioconductor ecosystem that focuses on the
-development of of high-quality open research software for life
+development of high-quality open research software for life
 sciences (@Gentleman2004, @Huber2015). The support for modularity and
 interoperability is a key to efficient resource sharing and
 collaborative development both within and across research fields. The
