--- a/19_visualization_techniques.Rmd
+++ b/19_visualization_techniques.Rmd
@@ -301,7 +301,7 @@ plotAbundance(tse_order,
 ```
 
 To add a sample annotation, you can combine plots that you get from the output
-pf _plotAbundance_.
+of _plotAbundance_.
 
 ```{r plotAbundance2}
 # Create plots
