--- a/14_alpha_diversity.Rmd
+++ b/14_alpha_diversity.Rmd
@@ -119,7 +119,7 @@ It adds p-values to plot.
 
 ```{r visualize-shannon}
 if( !require(ggsignif) ){
-  install.packages(ggsignif)
+  install.packages("ggsignif")
 }
 library(ggplot2)
 library(patchwork)
