--- a/23_multi-assay_analyses.Rmd
+++ b/23_multi-assay_analyses.Rmd
@@ -239,7 +239,10 @@ model.prepared <- prepare_mofa(
   object = model,
   model_options = model_opts
 )
-model.trained <- run_mofa(model.prepared)
+
+#Some systems may require the specification `use_basilisk = TRUE`
+#so it has been added to the following code
+model.trained <- run_mofa(model.prepared, use_basilisk = TRUE)
 ```
 
 Visualizing the variance explained:
