Add example on modifying and adding coldata (#237)

--- a/10_manipulation.Rmd
+++ b/10_manipulation.Rmd
@@ -321,6 +321,31 @@ If you want to split the data based on another variable than taxonomic rank, use
 splitOn(tse, "SampleType")
 ```
 
+## Add or modify data
+
+The information contained by the `colData` of a `TreeSE` can be modified by
+accessing the desired variables.
+
+```{r modify-coldata}
+# modify the Description entries
+colData(tse)$Description <- paste(colData(tse)$Description, "modified description")
+
+# view modified variable
+head(tse$Description)
+```
+New information can also be added to the experiment by creating a new variable.
+
+```{r add-coldata}
+# simulate new data
+new_data <- runif(ncol(tse))
+
+# store new data as new variable in colData
+colData(tse)$NewVariable <- new_data
+
+# view new variable
+head(tse$NewVariable)
+```
+
 ## Merge data
 
 `mia` package has `mergeSEs` function that merges multiple `SummarizedExperiment`
