I added text to intro

--- a/01_intro.Rmd
+++ b/01_intro.Rmd
@@ -25,7 +25,7 @@ central data infrastructure, the `SummarizedExperiment` data container
 and its derivatives, have already been widely adopted in microbiome
 research, single cell sequencing, and in other fields, allowing a
 rapid adoption and extensions of emerging data science techniques
-across application domains.
+across application domains. This is my new text
 
 We assume that the reader is already familiar with R programming. For
 references and tips on introductory material for R and Bioconductor,
